[package]
name = "oat-scheme"
version = "0.1.0"
authors = ["Fraser Li <fraserli@fmli.dev>"]
edition = "2021"
repository = "https://github.com/fraserli/oat-scheme"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "oats"
path = "src/bin/oats.rs"

[dependencies]
chumsky = { version = "=1.0.0-alpha.7", features = ["label"] }
